--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,15 @@ android {
 
     defaultConfig {
         applicationId "com.example.controllersystemapp"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
+        renderscriptTargetApi 18
+        renderscriptSupportModeEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -21,6 +24,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
@@ -30,8 +40,85 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
+    //  implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation 'com.github.ome450901:SimpleRatingBar:1.5.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+
+    // rtl viewpager
+    implementation 'com.duolingo.open:rtl-viewpager:2.0.0'
+
+    //roundedImage
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    //colorRating
+    implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
+
+    //image Slider
+    implementation 'com.github.smarteist:autoimageslider:1.3.2-appcompat'
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
+
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.developer-shivam:Crescento:1.2.1'
+    implementation 'com.ms-square:etsyblur:0.2.1'
+
+    implementation 'com.nineoldandroids:library:2.4.0'
+
+    // circle image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    // implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
+    implementation 'com.github.developer-shivam:Crescento:1.2.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
+    implementation 'jp.wasabeef:blurry:3.0.0'
+    implementation 'com.andrognito.flashbar:flashbar:1.0.3'
+    implementation 'com.gauravbhola.ripplepulsebackground:library:1.0.0'
+    implementation 'com.github.aarsy.googlemapsanimations:googlemapsanimations:1.0.5'
+
+    implementation 'com.github.developer-shivam:Crescento:1.2.1'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.7.1"
+    implementation "com.squareup.retrofit2:converter-gson:2.7.1"
+
+    //OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
+    implementation "com.google.code.gson:gson:2.8.6"
+
+    //RxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.3'// works with RxJava 2
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
+    implementation 'com.andrognito.flashbar:flashbar:1.0.3'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
+    implementation 'io.coil-kt:coil:0.11.0'
 
 }
