--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".admin.specialcustomers.AdminSpecialCustomersActivity"></activity>
-        <activity android:name=".admin.reports.AdminReportsActivity" />
-        <activity android:name=".admin.storesproducts.AdminStoresProductActivity" />
-        <activity android:name=".admin.makeorders.AdminMakeOrdersActivity" />
-        <activity android:name=".admin.delivery.AdminDeliveryActivity" />
-        <activity android:name=".admin.delegatesAccountants.AdminAccountantActivity" />
+        <activity android:name=".admin.RedirectFragmentsActivity"></activity>
         <activity android:name=".admin.AdminHomeActivity" />
         <activity android:name=".MainActivity">
 
