edit delegate back

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".admin.RedirectFragmentsActivity"></activity>
+        <activity android:name=".admin.delegatesAccountants.fragments.DelegatesDetailsActivity"></activity>
+        <activity android:name=".admin.RedirectFragmentsActivity" />
         <activity android:name=".admin.AdminHomeActivity" />
         <activity android:name=".MainActivity">
 
