--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,4 +121,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'io.coil-kt:coil:0.11.0'
 
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+
 }
