settingFragment , editProfile , start Admin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".admin.delegatesAccountants.fragments.DelegatesDetailsActivity"></activity>
-        <activity android:name=".admin.RedirectFragmentsActivity" />
-        <activity android:name=".admin.AdminHomeActivity" />
+        <activity android:name=".admin.settings.RedirectSettingdActivity"></activity>
+        <activity
+            android:name=".admin.RedirectFragmentsActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".admin.AdminHomeActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".MainActivity">
 
             <!--
