adding and fixing layout designs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,5 +122,6 @@ dependencies {
 
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
+    implementation 'com.github.alahammad:android-OTP-View:1.0.2'
 
 }
