--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
             </intent-filter>
             -->
         </activity>
-        <activity android:name=".common.ContainerActivityForFragment">
+        <activity android:name=".common.ContainerActivityForFragment"
+            android:windowSoftInputMode="adjustResize">
+
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 
