--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".admin.addproduct.ScanCodeActivity"></activity>
+        <activity android:name=".accountant.home.AccountantHomeActivity"></activity>
+        <activity android:name=".admin.addproduct.ScanCodeActivity" />
 
         <uses-library
             android:name="org.apache.http.legacy"
