--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,4 +138,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
 
+    implementation 'me.relex:circleindicator:2.1.4'
+
+    implementation 'com.duolingo.open:rtl-viewpager:2.0.0'
+
+
 }
