--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".accountant.home.RedirectAccountantsFragmentActivity"></activity>
         <activity android:name=".accountant.home.AccountantHomeActivity" />
         <activity android:name=".admin.addproduct.ScanCodeActivity" />
-
+        <activity android:name=".callcenter.home.CallCenterHome"/>
+        <activity android:name=".callcenter.home.RedirectCallCenter"/>
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
