--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,6 +145,8 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.4'
 
     implementation 'com.duolingo.open:rtl-viewpager:2.0.0'
+    implementation 'com.jsibbold:zoomage:1.3.0'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
 
 }
