--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,12 @@
             <!-- </intent-filter> -->
         </activity>
         <activity android:name="com.smartangle.util.CommonActivity" />
+        <service
+            android:name=".notification.FirebaseNotification">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
