--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,12 @@ allprojects {
     repositories {
         google()
         jcenter()
-            maven { url 'https://jitpack.io' }
+        mavenCentral()
 
+        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://maven.google.com'
+        }
     }
 }
 
