--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
         </activity>
         <activity android:name="com.smartangle.util.CommonActivity" />
         <service
-            android:name=".notification.FirebaseNotification">
+            android:name=".common.notification.FirebaseNotification">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
